Fix problems with expired token and refactor controller sessions
